# TheRunRacesOverlay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  NOTICE.md  OBS-PLUGIN.md  README.md  buildspec.json  install-obs-plugin.bat  package.json  server.js  start-overlay.bat
.github/actions/build-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1
.github/workflows/: build-obs-plugin.yml
data/locale/: en-US.ini  es-ES.ini
public/: app.js  styles.css
release/TheRunRacesOverlay-v1.0.0/: CHANGELOG.md  README.md  server.js  start-overlay.ps1
release/TheRunRacesOverlay-v1.0.0/public/: index.html  styles.css
src/: backend-manager.cpp  backend-manager.hpp  plugin-main.cpp  plugin-support.c.in  plugin-support.h  race-source.cpp  race-source.hpp
test/: server.test.js
